# java-tool-testing-jacoco

./: .gitignore  METRICS_COVERAGE.md  README.md  TESTING_TEAM.md  TRIGGER.md  dashboard_metrics.json  jacoco.json  jacoco_metric_evidence.json  jacoco_metrics.json  jacoco_metrics.py  jacoco_trigger.py  jacoco_xml.py  metrics.json  pom.xml  pyproject.toml  static_du_analysis.py  testable_dashboard.json  validate_metric_coverage.py
artifacts/training/: churn.json  jacoco.xml  static_du_summary.json
config/: metric_coverage.json  platform_trigger.json
jacoco-platform/: pom.xml
jacoco-platform/src/main/java/com/testable/training/platform/: ArtifactCollector.java  JacocoCoverageLoader.java  JacocoXmlParser.java  MetricCoverageValidator.java  MetricDefinition.java  OfficialJacocoAnalyzer.java  PlatformExporter.java
jacoco-platform/src/test/java/com/testable/training/platform/: JacocoMetricsEngineTest.java
jacoco_platform/: __main__.py  cli.py
sample_subject/: pom.xml
sample_subject/src/test/java/com/testable/training/: OrderServiceTest.java  PaymentValidatorTest.java
scripts/: collect_artifacts.py  export_platform_bundle.py  platform_jacoco_fixup.py  synthesize_training_artifacts.py  verify_100_percent.py  verify_jacoco_json.py
tests/: test_integration_pipeline.py  test_metrics.py  test_trigger.py
