[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jacoco-platform"
version = "1.0.0"
description = "JaCoCo training platform wrapper for Testable dashboard metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
jacoco-platform = "jacoco_platform.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jacoco_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
